--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # OCPD environment variables
-DEVICE="/dev/ttyUSB0"
+DEVICE="/dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_bcd16715a196ed119b31c998a7669f5d-if00-port0"
 BAUDRATE="460800"
 CPCD_TRACE="true"
 FLOW_CONTROL="true"
@@ -10,10 +10,10 @@ OTBR_ENABLE=1 #true
 BACKBONE_IF="eth0"
 OTBR_LOG_LEVEL="debug"
 OTB_FIREWALL=1 #"true"
-OTBR_REST_LISTEN_PORT="8081"
+OTBR_REST_LISTEN_PORT="8082"
 
 # OTBR-WEB environment variables
-OTBR_WEB_PORT="8086"
+OTBR_WEB_PORT="8088"
 
 # SOCAT environment variables
 NETWORK_DEVICE=
@@ -22,6 +22,6 @@ NETWORK_DEVICE=
 EZSP_LISTEN_PORT="20108"
 
 # UNIVERSAL FLASHER variables
-AUTOFLASH_FIRMWARE=1 #"true"
+AUTOFLASH_FIRMWARE=1 #"false"
 # Place the firmware file in the firmware directory and it will be automatically copied to the $HOME directory of the user running the container
 FIRMWARE="NabuCasa_SkyConnect_RCP_v4.3.1_rcp-uart-hw-802154_460800.gbl"
